fix: align Bauhaus blocks precisely to eliminate visible gaps between shapes

--- a/src/styles/components/bauhaus.scss
+++ b/src/styles/components/bauhaus.scss
@@ -4,8 +4,7 @@
 .composition {
   background-color: #000;
   position: relative;
-  height: 50vh;
-
+  height: 80vh;
   --unit: clamp(10px, 2vw, 30px);
   $unit: 15px;
 
@@ -17,8 +16,20 @@
     position: absolute;
     background-color: white;
     z-index: 2;
-    transition: transform 0.2s ease-in-out;
-    transform: translate(var(--x, 0), var(--y, 0));
+    transform-origin: center;
+    transition: transform 1.4s cubic-bezier(0.65, 0, 0.35, 1), opacity 0.4s ease;
+    opacity: 0;
+    transform: translate(var(--x), var(--y));
+  }
+
+  &.show {
+    .block,
+    .block .orange,
+    .block .aqua,
+    .block .chartreuse,
+    .block .darkgreen {
+      opacity: 1;
+    }
   }
 
   .block.red {
@@ -26,18 +37,27 @@
     right: calc(var(--unit) * 10);
     width: calc(var(--unit) * 4);
     height: calc(var(--unit) * 4);
+    --x: 150px;
+    --y: -120px;
 
     .orange {
+      position: absolute;
+      top: 0;
       left: calc(var(--unit) * -2);
       width: calc(var(--unit) * 2);
       height: calc(var(--unit) / 3);
+      --x: -160px;
+      --y: -80px;
     }
 
     .aqua {
+      position: absolute;
       right: 0;
-      bottom: calc(var(--unit) * -2);
+      bottom: -25px;
       width: calc(var(--unit) / 3);
       height: calc(var(--unit) * 2);
+      --x: 90px;
+      --y: 160px;
     }
   }
 
@@ -46,6 +66,8 @@
     right: calc(var(--unit) * 6.87);
     width: calc(var(--unit) / 2);
     height: calc(var(--unit) * 14);
+    --x: 180px;
+    --y: -40px;
   }
 
   .block.green {
@@ -53,19 +75,27 @@
     right: calc(var(--unit) * 6.87);
     width: calc(var(--unit) * 2.5);
     height: calc(var(--unit) / 3);
+    --x: 120px;
+    --y: 140px;
 
     .chartreuse {
+      position: absolute;
       top: calc(var(--unit) * 2);
       right: calc(var(--unit) * 0.66);
       width: calc(var(--unit) * 2);
       height: calc(var(--unit) / 2);
+      --x: 160px;
+      --y: 200px;
     }
 
     .darkgreen {
+      position: absolute;
       top: calc(var(--unit) * 4.5);
       right: calc(var(--unit) * 0.66);
       width: calc(var(--unit) * 6);
       height: calc(var(--unit) / 4);
+      --x: 240px;
+      --y: 220px;
     }
   }
 
@@ -74,6 +104,8 @@
     right: calc(var(--unit) * 7.53);
     width: var(--unit);
     height: calc(var(--unit) * 4.66);
+    --x: 80px;
+    --y: 180px;
   }
 
   .block.pink {
@@ -81,5 +113,7 @@
     right: calc(var(--unit) * 8.33);
     width: calc(var(--unit) * 3.33);
     height: calc(var(--unit) * 3.33);
+    --x: -180px;
+    --y: 160px;
   }
 }
